@@ -2,6 +2,8 @@ For a documentation of all features, see http://semantic-mediawiki.org
 
 == SMW 1.5.? ==
 
+* The "like" comparator ~ in inline queries is now enabled by default. To use
+  the former setting, use $smwgQComparators = '<|>|!'; in your LocalSettings.php.
 * A new datatype "Telephone number" has been introduced for validating phone
   numbers based on RFC 3966. Only global phone numbers are accepted, and no
   vanity numbers (those containing letters) are allowed. Use Type:String if
